--- a/Computer.html
+++ b/Computer.html
@@ -48,7 +48,7 @@
 <li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
 
 <p><dt>Seminars<dd><ul>
-<li><a href="./Seminars/Introduction to ComputerDotPlay.html">Introduction to ComputerDotPlay</a><li><a href="./Seminars/Composing with Computers 1.html">Composing with Computers 1</a></ul>
+<li><a href="./Seminars/Introduction to ComputerDotPlay.html">Introduction to ComputerDotPlay</a><li><a href="./Seminars/Composing with Computers 1.html">Composing with Computers 1</a><li><a href="./Seminars/Human-Computer Interaction.html">Human-Computer Interaction</a></ul>
 
 <p><dt>Workshops<dd><ul>
 <li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens.html">Playing with UGens</a><li><a href="./Workshops/Patterns and Ndefs.html">Patterns and Ndefs</a><li><a href="./Workshops/Programming Concepts 2.html">Programming Concepts 2</a></ul>
@@ -67,7 +67,8 @@
 <p><code class='code prettyprint lang-sc'>Computer.play</code> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
 
 <p>15/02/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-nick-collins/">Research Seminar: Nick Collins</a>
-<p>18/03/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-john-murray/">Research Seminar: John Murray</a><h3><a class='anchor' name='Events'>Events</a></h3>
+<p>18/03/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-john-murray/">Research Seminar: John Murray</a>
+<p>26/04/2017 <a href="https://www.mstrcyork.org/people/jez-wells/">Research Seminar: Jez Wells</a><h3><a class='anchor' name='Events'>Events</a></h3>
 
 <p>10/03/2017 Christina Kubisch: Electrical Walks in Manchester<pre class='code prettyprint lang-sc'>Computer.url("https://www.eventbrite.co.uk/e/cut-splice-festival-2017-manchester-electrical-walks-with-christina-kubisch-tickets-31260707618");</pre>
 
