ready for 7 Feb

--- a/Classes/Char.html
+++ b/Classes/Char.html
@@ -54,6 +54,8 @@
 <li class='toc3'><a href='#-=='>==</a> </li>
 <li class='toc3'><a href='#-asAscii'>asAscii</a> </li>
 <li class='toc3'><a href='#-asUnicode'>asUnicode</a> </li>
+<li class='toc3'><a href='#-firstToLower'>firstToLower</a> </li>
+<li class='toc3'><a href='#-firstToUpper'>firstToUpper</a> </li>
 <li class='toc3'><a href='#-hash'>hash</a> </li>
 <li class='toc3'><a href='#-isControl'>isControl</a> </li>
 <li class='toc3'><a href='#-isLower'>isLower</a> </li>
@@ -139,6 +141,10 @@
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-==' href='./../Overviews/Methods.html#=='>==</a> (<span class='argstr'>aChar</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-asAscii' href='./../Overviews/Methods.html#asAscii'>asAscii</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-asUnicode' href='./../Overviews/Methods.html#asUnicode'>asUnicode</a> </h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-firstToLower' href='./../Overviews/Methods.html#firstToLower'>firstToLower</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/extVarious-SVGFile.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/extVarious-SVGFile.sc</a></div>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-firstToUpper' href='./../Overviews/Methods.html#firstToUpper'>firstToUpper</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/extVarious-SVGFile.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/extVarious-SVGFile.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-hash' href='./../Overviews/Methods.html#hash'>hash</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-isControl' href='./../Overviews/Methods.html#isControl'>isControl</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-isLower' href='./../Overviews/Methods.html#isLower'>isLower</a> </h3>
