--- a/Classes/Lag.html
+++ b/Classes/Lag.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,7 +19,7 @@
 <div id='summary'>Exponential lag</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Filter.sc'>Filter.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Filter.html">Filter</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Filter.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Filter.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Filter.html">Filter</a> : <a href="../Classes/PureUGen.html">PureUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='subclasses'>Subclasses: <a href="../Classes/Lag2.html">Lag2</a>, <a href="../Classes/Lag3.html">Lag3</a>, <a href="../Classes/Ramp.html">Ramp</a></div>
 <div id='related'>See also: <a href="./../Classes/Lag2.html">Lag2</a>, <a href="./../Classes/Lag3.html">Lag3</a>, <a href="./../Classes/VarLag.html">VarLag</a>, <a href="./../Classes/LagUD.html">LagUD</a></div>
 </div>
@@ -28,9 +27,9 @@
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a>  <a href='#*kr'>kr</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
@@ -45,9 +44,9 @@
 <p>The input signal.<tr><td class='argumentname'>lagTime<td class='argumentdesc'>
 <p>60 dB lag time in seconds.<tr><td class='argumentname'>mul<td class='argumentdesc'>
 <p>Output will be multiplied by this value.<tr><td class='argumentname'>add<td class='argumentdesc'>
-<p>This value will be added to the output.</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>This value will be added to the output.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>(
 // used to lag pitch
@@ -62,4 +61,4 @@
     )
 }.play
 )</pre>
-<div class='doclink'>source: <a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/Lag.schelp'>/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/Lag.schelp</a><br>link::Classes/Lag::<br>sc version: 3.5.5</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Lag.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Lag.schelp</a><br>link::Classes/Lag::<br>sc version: 3.8.0</div></div></body></html>
