changed hci slides

--- a/Seminars/Human-Computer Interaction.html
+++ b/Seminars/Human-Computer Interaction.html
@@ -19,7 +19,7 @@
 <div id='summary'>Computer.play(Music, Creativity &amp; Code)</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../Computer.html">Computer.play</a>, <a href="./../Wrokshop/Interfacing">Interfacing</a></div>
+<div id='related'>See also: <a href="./../Computer.html">Computer.play</a>, <a href="./../Workshops/Interfacing.html">Interfacing</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'></ul></div><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.001.png'/><br><b>Laetitia Sonami - bbc.co.uk</b></div>
@@ -86,14 +86,9 @@ Computer.url("http://youtu.be/TzOJtZYsGSA?t=2m40s"); //Laurie Spiegel interview<
 <p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.024.png'/></div>
 
 <p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.025.png'/></div>
-
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.026.png'/></div>
-
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.027.png'/></div>
+<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.027.png'/></div>
 
 <p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.028.png'/></div>
-
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.029.png'/></div>
 <div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.030.png'/></div>
 
 <p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.031.png'/></div>
@@ -116,7 +111,8 @@ Computer.url("http://youtu.be/TzOJtZYsGSA?t=2m40s"); //Laurie Spiegel interview<
 
 <p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.037.png'/><br><b>Nicolas Collins: Trombone-Propelled Electronics - artschoolshithead.files.wordpress.com</b></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/89jbl0ZuaH4?t=4m55s");</pre>
+<p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/89jbl0ZuaH4?t=4m55s");
+Computer.url("http://nicolascollins.com/texts/lowbrass.pdf");</pre>
 
 <p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.038.png'/><br><b>Michel Waisvisz (STEIM) - The Hands - carlavanthijnfotografie.nl</b></div>
 
