--- a/Workshops/Playing with UGens.html
+++ b/Workshops/Playing with UGens.html
@@ -19,7 +19,7 @@
 <div id='summary'>Computer.play(Music, Creativity &amp; Code)</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../Computer.html">Computer.play</a>, <a href="./../Workshops/Playing with UGens 2.html">Playing with UGens 2</a></div>
+<div id='related'>See also: <a href="./../Computer.html">Computer.play</a>, <a href="./../Study Guides/Digital Synthesis.html">Digital Synthesis</a>, <a href="./../Study Guides/Digital Audio.html">Digital Audio</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#UGens'>UGens</a></li>
