first audio analysis

--- a/Study Guides/Digital Synthesis.html
+++ b/Study Guides/Digital Synthesis.html
@@ -132,11 +132,11 @@ var start = 1/2;
 <p>a trigger (&lt;= 0 to &gt; 0) causes the playback to start from startPos
 <p>using a trigger without looping
 <p><code class='code prettyprint lang-sc'>Impulse.kr</code> produces a trigger with a certain frequency<pre class='code prettyprint lang-sc'>(
-    var start = 1/2;
-    { PlayBuf.ar(2, b.bufnum, BufRateScale.kr(b.bufnum),
-        Impulse.kr(1/3),
-        startPos: BufFrames.kr(b.bufnum) * start, loop: 0)
-    }.scope
+var start = 1/2;
+{ PlayBuf.ar(2, b.bufnum, BufRateScale.kr(b.bufnum),
+    Impulse.kr(1/3),
+    startPos: BufFrames.kr(b.bufnum) * start, loop: 0)
+}.scope
 )</pre>
 
 <p>Using a trigger with looping:
@@ -159,19 +159,23 @@ b.free</pre>
 <pre class='code prettyprint lang-sc'>//granular example
 b = Buffer.loadDialog; //choose sound file
 
+(
 SynthDef("envPlay", {arg freqMod=1;
     var signal, env;
     signal = PlayBuf.ar(2,b.bufnum, Rand(0.5,4), startPos: BufFrames.kr(b.bufnum)*Rand(0,1));
     env = EnvGen.kr(Env.perc(0.01,0.1), doneAction:2);
     Out.ar([0,1], signal * env * 0.2);
 }).send(s);
+)
 
+(
 {
-    inf.do{
+inf.do{
 Synth("envPlay");
-    rrand(0.1,0.01).yield;
+rrand(0.1,0.01).yield;
 }
-}.fork</pre>
+}.fork;
+)</pre>
 <h3><a class='anchor' name='DiskIn'>DiskIn</a></h3>
 
 <p>To continuously play longer sound file from disk. One buffer must be preloaded.
@@ -489,7 +493,7 @@ a = Synth('help-dynKlank');
 a.setn(\freqs, Array.rand(4, 500, 2000));
 a.setn(\ringtimes, Array.rand(4, 0.2, 4) );</pre>
 <h2><a class='anchor' name='Noise'>Noise</a></h2>
-<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide2/noise.png'/><br><b>NOISE!!!</b></div>
+<div class='image'><img src='http://24.media.tumblr.com/tumblr_mch0831jxO1rf089no1_1280.gif'/><br><b>NOISE!! - 24.media.tumblr.com</b></div>
 <ul>
 <li>Noise in signal processing may refer to two things:<li>Unwanted modification of signal (unwanted sounds)<li>Or (what we are interested now):<li>Aperiodic signals<li>Random signals<li>However with predictable spectral density<li>Predictably unpredictable...</ul>
 <h3><a class='anchor' name='Coloured%20Noise'>Coloured Noise</a></h3>
