--- a/Classes/PanAz.html
+++ b/Classes/PanAz.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,17 +19,18 @@
 <div id='summary'>Azimuth panner</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Pan.sc'>Pan.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MultiOutUGen.html">MultiOutUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Pan.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Pan.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MultiOutUGen.html">MultiOutUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/Balance2.html">Balance2</a>, <a href="./../Classes/LinPan2.html">LinPan2</a>, <a href="./../Classes/Pan2.html">Pan2</a>, <a href="./../Classes/Pan4.html">Pan4</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a>  <a href='#*kr'>kr</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
+<ul class='toc'></ul><li class='toc1'><a href='#Comparison%20to%20Pan2'>Comparison to Pan2</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>Multichannel equal power panner.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
@@ -46,12 +46,12 @@
 <p>Thus all channels will be cyclically panned through if a sawtooth wave from -1 to +1 is used to modulate the pos.<tr><td class='argumentname'>level<td class='argumentdesc'>
 <p>A control rate level input.<tr><td class='argumentname'>width<td class='argumentdesc'>
 <p>The width of the panning envelope. Nominally this is 2.0 which pans between pairs of adjacent speakers. Width values greater than two will spread the pan over greater numbers of speakers. Width values less than one will leave silent gaps between speakers.<tr><td class='argumentname'>orientation<td class='argumentdesc'>
-<p>Should be zero if the front is a vertex of the polygon. The first speaker will be directly in front. Should be 0.5 if the front bisects a side of the polygon. Then the first speaker will be the one left of center.</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>Should be zero if the front is a vertex of the polygon. The first speaker will be directly in front. Should be 0.5 if the front bisects a side of the polygon. Then the first speaker will be the one left of center.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>// five channel circular panning
-Server.internal.boot;
+s.boot;
 (
 {
     PanAz.ar(
@@ -61,7 +61,18 @@ Server.internal.boot;
         0.5,            // level
         3            // width
     );
-}.play(Server.internal);
-Server.internal.scope;
+}.play;
+s.scope;
 )</pre>
-<div class='doclink'>source: <a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/PanAz.schelp'>/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/PanAz.schelp</a><br>link::Classes/PanAz::<br>sc version: 3.5.5</div></div></body></html>
+<h2><a class='anchor' name='Comparison%20to%20Pan2'>Comparison to Pan2</a></h2>
+
+<p>Despite a certain similarity, <a href="./../Classes/Pan2.html">Pan2</a> and <a href="./../Classes/PanAz.html">PanAz</a> with 2 channels behave differently.<pre class='code prettyprint lang-sc'>// one full cycle for PanAz: from 0 to 1
+{ PanAz.ar(2, DC.ar(1), Line.ar(0, 1, 0.1)) }.plot(0.1)
+// one full cycle for Pan2: from -1 to 1 and back to -1
+{ Pan2.ar(DC.ar(1), EnvGen.kr(Env([-1, 1, -1], [0.05, 0.05]))) }.plot(0.1)
+
+// in other words, while Pan2 makes one full transition
+{ Pan2.ar(DC.ar(1), Line.ar(-1, 1, 0.1)) }.plot(0.1)
+// we need only a half one in PanAz:
+{ PanAz.ar(2, DC.ar(1), Line.ar(0, 1/2, 0.1)) }.plot(0.1)</pre>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/PanAz.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/PanAz.schelp</a><br>link::Classes/PanAz::<br>sc version: 3.8.0</div></div></body></html>
