ready for 10 Feb

--- a/Study Guides/Audio Analysis and Machine Listening.html
+++ b/Study Guides/Audio Analysis and Machine Listening.html
@@ -36,6 +36,7 @@
 <ul class='toc'></ul><li class='toc2'><a href='#FFT%20stretching'>FFT stretching</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Machine%20Listening'>Machine Listening</a></li>
 <ul class='toc'><li class='toc2'><a href='#Feature%20Extraction'>Feature Extraction</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Machine%20Listening%20in%20SuperCollider'>Machine Listening in SuperCollider</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Sound%20Analysis'>Sound Analysis</a></h2>
 
 <p><strong>Why analyse audio with computers?</strong><ul>
@@ -772,4 +773,18 @@ y.free;</pre>
 
 <p><strong>High-level features</strong>:<ul>
 <li><em>Onset detection</em><li><em>Pitch detection (monophonic)</em><li><em>Melody extraction</em><li><em>Pitch detection (polyphonic)</em><li><em>Key and chord recognition</em><li><em>Beat tracking and rhythm extraction</em><li><em>Instrument recognition</em></ul>
-<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Study Guides/Audio Analysis and Machine Listening.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Study Guides/Audio Analysis and Machine Listening.schelp</a><br>link::Study Guides/Audio Analysis and Machine Listening::<br>sc version: 3.8.0</div></div></body></html>
+<h3><a class='anchor' name='Machine%20Listening%20in%20SuperCollider'>Machine Listening in SuperCollider</a></h3>
+
+<p>These are some of the classes in SuperCollider for Machine Listening:<pre class='code prettyprint lang-sc'>Pitch, Tartini, ZeroCrossing
+Loudness
+Onsets
+SpecCentroid
+SpecFlatness
+SpecPcile (spectral roll-off)
+MFCC
+BeatTrack, BeatTrack2
+KeyTrack
+
+MCLDUGens
+FFTFlux</pre>
+<div class='note'><span class='notelabel'>NOTE:</span> Go through the helpfiles to understand what each class does</div><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Study Guides/Audio Analysis and Machine Listening.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Study Guides/Audio Analysis and Machine Listening.schelp</a><br>link::Study Guides/Audio Analysis and Machine Listening::<br>sc version: 3.8.0</div></div></body></html>
