--- a/Computer.html
+++ b/Computer.html
@@ -54,10 +54,10 @@
 <li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens.html">Playing with UGens</a><li><a href="./Workshops/Patterns and Ndefs.html">Patterns and Ndefs</a><li><a href="./Workshops/Programming Concepts 2.html">Programming Concepts 2</a><li><a href="./Workshops/Interfacing.html">Interfacing</a></ul>
 
 <p><dt>Study Guides<dd><ul>
-<li><a href="./Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./Study Guides/Deconstructing SC code.html">Deconstructing SC code</a><li><a href="./Study Guides/Digital Audio.html">Digital Audio</a><li><a href="./Study Guides/Digital Synthesis.html">Digital Synthesis</a></ul>
+<li><a href="./Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./Study Guides/Deconstructing SC code.html">Deconstructing SC code</a><li><a href="./Study Guides/Digital Audio.html">Digital Audio</a><li><a href="./Study Guides/Digital Synthesis.html">Digital Synthesis</a><li><a href="./Study Guides/Audio Analysis and Machine Listening.html">Audio Analysis and Machine Listening</a></ul>
 
 <p><dt>Code Examples<dd><ul>
-<li><a href="./Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./Code Examples/MIDI Fun.html">MIDI Fun</a><li><a href="./Code Examples/FX Fun.html">FX Fun</a><li><a href="./Code Examples/Synth Fun.html">Synth Fun</a></ul>
+<li><a href="./Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./Code Examples/MIDI Fun.html">MIDI Fun</a><li><a href="./Code Examples/FX Fun.html">FX Fun</a><li><a href="./Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./Code Examples/Buffer Tricks.html">Buffer Tricks</a></ul>
 </dl>
 <h2><a class='anchor' name='Register'>Register</a></h2>
 
